Fixed issue on mobile

--- a/links/style.main.css
+++ b/links/style.main.css
@@ -1,5 +1,5 @@
 html { background-color: #eee; }
-body { font-family: 'lora_regular';font-size: 20px;max-width: 600px;margin: 0px auto;line-height: 40px;padding: 90px}
+body { font-family: 'lora_regular';font-size: 20px;max-width: 600px;margin: 0px auto;line-height: 40px;padding: 90px 10px}
 bg { background:url(../../public.paradise/media/vectors/background.svg); background-position:center center; width:100vw; height:100vh; display:block; position: fixed; left:0px; top:0px; }
 view { display: block;background: black;padding:60px;position: relative;border-radius: 3px;overflow: hidden; padding-bottom:90px; color:white;}
 input { width: calc(100% - 120px);font-family: 'input_mono_medium';font-size: 14px;line-height: 16px;background: black;padding: 20px 60px;position: absolute;left: 0px;bottom: 0px; color:white;border-top: 1px solid #333}
